# japm

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  TODO  build.sh
.github/workflows/: cmake.yml
docs/japml/: init.md  logging.md
lib/libjapml/: README.md  action.c  action.h  colors.h  db.c  db.h  error.c  error.h  exit.c  exit.h  file.c  file.h  handle.h  helper.c  helper.h  init.c  init.h  input.h  install.c  install.h  internet.c  internet.h  japml.h  japmlcurses.c  japmlcurses.h  json.c  json.h  list.c  list.h  log.c  log.h  package.c  package.h  parser.c  parser.h  remove.c  remove.h  system.c  system.h
src/: CMakeLists.txt  devel.c  devel.h  errors.c  errors.h  install.c  install.h  internet.c  internet.h  main.c  main.h  package.c  package.h  remove.c  remove.h  search.c  search.h  update.c  update.h
src/Errors/: CMakeLists.txt  errors.c  errors.h
src/IO/: json.c  json.h  local-repo.c  local-repo.h  term.c  term.h
src/PackageManagment/: CMakeLists.txt  install.c  install.h  program.json
src/PackageManagment/HTTP/: CMakeLists.txt  http.c  http.h
static/: .gitattributes
tests/: Debugging.txt  valgrind.txt
